After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656511 - mountsource: fix leak of AsyncResult in ask_password_async
mountsource: fix leak of AsyncResult in ask_password_async
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2011-08-14 13:41 UTC by Carl-Anton Ingmarsson
Modified: 2011-08-22 13:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mountsource: fix leak of AsyncResult in ask_password_async (683 bytes, patch)
2011-08-14 13:41 UTC, Carl-Anton Ingmarsson
committed Details | Review

Description Carl-Anton Ingmarsson 2011-08-14 13:41:57 UTC
unref the GSimpleAsyncResult in ask_password_reply
Comment 1 Carl-Anton Ingmarsson 2011-08-14 13:41:59 UTC
Created attachment 193808 [details] [review]
mountsource: fix leak of AsyncResult in ask_password_async
Comment 2 Tomas Bzatek 2011-08-22 13:03:11 UTC
Thanks for spotting this, added two more occurrences. There are even more leaks all over the code, going to review them...

commit 5c72b0ef689b8fe6a49cf198be62481bc0436ee8
Author: Carl-Anton Ingmarsson <ca.ingmarsson@gmail.com>
Date:   Mon Aug 22 15:01:27 2011 +0200

    mountsource: Fix leaks of GSimpleAsyncResult
    
    https://bugzilla.gnome.org/show_bug.cgi?id=656511