mountsource: Fix leaks of GSimpleAsyncResult

https://bugzilla.gnome.org/show_bug.cgi?id=656511